--- a/src/packs/classes/class_Herald_jaxdq1hah0d634sr.yml
+++ b/src/packs/classes/class_Herald_jaxdq1hah0d634sr.yml
@@ -1,11 +1,11 @@
 folder: null
-name: Herald
+name: Глашатай
 type: class
 img: icons/magic/holy/barrier-shield-winged-blue.webp
 system:
   description:
     value: >-
-      <p><strong>Table: Herald<br></strong></p>
+      <p><strong>Таблиця: Глашатай<br></strong></p>
 
       <table style="width: 95.565%;" border="1"><colgroup><col style="width:
       6.75068%;"><col style="width: 7.61862%;"><col style="width:
@@ -17,11 +17,11 @@ system:
 
       <tr style="height: 47.6px;">
 
-      <td style="text-align: center; height: 47.6px;">Level</td>
+      <td style="text-align: center; height: 47.6px;">Рівень</td>
 
-      <td style="text-align: center; height: 47.6px;">Prof.<br>Bonus</td>
+      <td style="text-align: center; height: 47.6px;">Бонус<br>майстерності</td>
 
-      <td style="text-align: center; height: 47.6px;">Features</td>
+      <td style="text-align: center; height: 47.6px;">Особливості</td>
 
       <td style="text-align: center; height: 47.6px;">Lessons<br>Known</td>
 
@@ -33,9 +33,9 @@ system:
 
       </td>
 
-      <td style="text-align: center; height: 47.6px;">Maneuvers<br>Known</td>
+      <td style="text-align: center; height: 47.6px;">Відомі<br>маневри</td>
 
-      <td style="text-align: center; height: 47.6px;">Maneuver<br>Degree</td>
+      <td style="text-align: center; height: 47.6px;">Ступінь<br>маневру</td>
 
       </tr>
 
@@ -451,17 +451,17 @@ system:
 
       </table>
 
-      <h3>Hit Points</h3>
+      <h3>Очки здоров’я</h3>
 
-      <p><strong>Hit Dice: </strong>1d10 per herald level&nbsp;</p>
+      <p><strong>Кістки здоров’я: </strong>1d10 за кожний рівень глашатая&nbsp;</p>
 
-      <p><strong>Hit Points at 1st Level: 10</strong> + your Constitution
-      modifier</p>
+      <p><strong>Hit Points at 1st Рівень: 10</strong> + your Constitution
+      модифікатор</p>
 
-      <p><strong>Hit Points at Higher Levels: </strong>1d10 (or 6) + your
-      Constitution modifier per herald level after 1st</p>
+      <p><strong>Hit Points at Higher Рівеньs: </strong>1d10 (or 6) + your
+      Constitution модифікатор за кожний рівень глашатая після 1-го</p>
 
-      <h3>Proficiencies</h3>
+      <h3>Володіння</h3>
 
       <p><strong>Armor:&nbsp;</strong>Light armor, medium armor, heavy armor,
       shields</p>
@@ -470,15 +470,15 @@ system:
 
       <p><strong>Saving Throws:&nbsp;</strong>Wisdom, Charisma</p>
 
-      <p><strong>Skills:&nbsp;</strong>Choose two from Athletics, Acrobatics,
-      History, Insight, Intimidation, Medicine, Persuasion, and Religion</p>
+      <p><strong>Skills:&nbsp;</strong>Choose two from Атлетика, Акробатика,
+      Історія, Проникливість, Залякування, Медицина, Переконання, and Релігія</p>
 
-      <h3>Equipment</h3>
+      <h3>Спорядження</h3>
 
       <p>You begin the game with 200 gold which you can spend on your
       character&rsquo;s starting weapons, armor, and adventuring gear. You can
       select your own gear or choose one of the following equipment packages.
-      Also consult the Suggested Equipment section of your chosen
+      Також звернися до розділу «Рекомендоване Equipment section of your chosen
       background.</p>
 
       <ul>
@@ -514,7 +514,7 @@ system:
   hitDiceUsed: 0
   advancement:
     - _id: FRxVq2gmJq6bNazt
-      title: Hit Points
+      title: Очки здоров’я
       type: HitPoints
     - _id: xZvqBnoISF7aE0mL
       type: Trait
@@ -568,7 +568,7 @@ system:
             count: 2
     - _id: hH6TFO3xX3fwsAeQ
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 1
       configuration:
         items:
@@ -577,7 +577,7 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.71l0zmi8bryu6ssx
     - _id: 0tmhnpAJHRNEesaj
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 2
       configuration:
         items:
@@ -585,21 +585,21 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.c6aiq8cd90fo3ry1
     - _id: uITLK2io7Z37VMdr
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 3
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.zj2p68ex28alzo9i
     - _id: XcdRnWWBlUFAxH5O
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 4
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.u220f22b3cpphtgb
     - _id: qRBjeBKcF3GHtAXK
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 5
       configuration:
         items:
@@ -607,56 +607,56 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.b6bbf481xmj9mi6u
     - _id: WDEA4D8eSmRfzyIl
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 6
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.xezwxikwrsfkzg4o
     - _id: BIqdICkEPCe6aVmV
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 8
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.p9gkawegqqbxb821
     - _id: VE3Hyln3A3NKGLyl
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 9
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.2td6srku3ln8qasl
     - _id: ZZcZ8ahHalbacoIC
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 10
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.eg3jukesb09wd7ot
     - _id: BzJcj7bniByqwJSt
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 11
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.ldib2glh1r8ufnzj
     - _id: y9StHC9fBzB7xgF0
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 12
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.qaiz9fwowbfzsm8y
     - _id: cOx8rmwzbCyvgNcV
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 14
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.dn7qd4m58ac396qm
     - _id: Zp3IdDvpIpjYvm9O
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 20
       configuration:
         items:
