--- a/src/packs/classes/class_Scholar_2pm8ysi5mz7gl1a7.yml
+++ b/src/packs/classes/class_Scholar_2pm8ysi5mz7gl1a7.yml
@@ -1,10 +1,10 @@
-name: Scholar
+name: Вчений
 type: class
 img: icons/sundries/scrolls/scroll-writing-brown-gold.webp
 system:
   description:
     value: >-
-      <p><strong>Table: Scholar</strong></p>
+      <p><strong>Таблиця: Вчений</strong></p>
 
       <table style="width: 100%; height: 383.6px;" border="1"><colgroup><col
       style="width: 14.3585%;"><col style="width: 15.1731%;"><col style="width:
@@ -15,7 +15,7 @@ system:
 
       <tr style="text-align: center; height: 47.6px;">
 
-      <td style="height: 47.6px;">Level</td>
+      <td style="height: 47.6px;">Рівень</td>
 
       <td style="height: 47.6px;">
 
@@ -25,7 +25,7 @@ system:
 
       </td>
 
-      <td style="height: 47.6px;">Features</td>
+      <td style="height: 47.6px;">Особливості</td>
 
       <td style="height: 47.6px;">
 
@@ -318,7 +318,7 @@ system:
       <td style="height:
       16.8px;">@UUID[Compendium.a5e-for-dnd5e.class-features.Item.9wln6kiazm9wl7mw]{Knowledgable
       Communication}
-      @UUID[Compendium.a5e-for-dnd5e.class-features.Item.e1igphq3svnvagl4]{Scholarly
+      @UUID[Compendium.a5e-for-dnd5e.class-features.Item.e1iзмhq3svnvagl4]{Scholarly
       Inspiration}
       @UUID[Compendium.a5e-for-dnd5e.class-features.Item.msqiaadyn4lilf8b]{Discoveries}</td>
 
@@ -382,17 +382,17 @@ system:
 
       </table>
 
-      <h3>Hit Points</h3>
+      <h3>Очки здоров’я</h3>
 
-      <p><strong>Hit Dice:</strong> 1d8 per scholar level</p>
+      <p><strong>Hit Dice:</strong> 1d8 за кожний рівень вченого</p>
 
-      <p><strong>Hit Points at 1st Level:</strong> 8 + your Constitution
-      modifier</p>
+      <p><strong>Hit Points at 1st Рівень:</strong> 8 + your Constitution
+      модифікатор</p>
 
-      <p><strong>Hit Points at Higher Levels: </strong>1d8 (or 5) + your
-      Constitution&nbsp;modifier per scholar level after first</p>
+      <p><strong>Hit Points at Higher Рівеньs: </strong>1d8 (or 5) + your
+      Constitution&nbsp;модифікатор per scholar level after first</p>
 
-      <h3>Proficiencies</h3>
+      <h3>Володіння</h3>
 
       <p><strong>Armor:</strong> Light armor</p>
 
@@ -403,28 +403,28 @@ system:
 
       <p><strong>Saving Throws:</strong> Intelligence, Wisdom</p>
 
-      <p><strong>Skills:</strong> Choose four from Animal Handling, Arcana,
-      Culture,&nbsp;Engineering, History, Insight, Investigation,
-      Medicine,&nbsp;Nature, and Perception</p>
+      <p><strong>Skills:</strong> Choose four from Поводження з тваринами, Аркана,
+      Culture,&nbsp;Engineering, Історія, Проникливість, Розслідування,
+      Медицина,&nbsp;Природа, and Увага</p>
 
-      <h3>Equipment</h3>
+      <h3>Спорядження</h3>
 
-      <p>You begin the game with 100gp which you can spend on
+      <p>You begin the game with 100зм which you can spend on
       your&nbsp;character&rsquo;s starting weapons, armor, and adventuring
-      gear.&nbsp;You can select your own gear or choose one of the
-      following&nbsp;equipment packages. Also consult the Suggested
+      gear.&nbsp;Ти можеш обрати власне спорядження або взяти one of the
+      following&nbsp;equipment packages. Також звернися до розділу «Рекомендоване
       Equipment&nbsp;section of your chosen background.</p>
 
       <ul>
 
-      <li><strong>Academic's Set (Cost 63gp):</strong> Quarterstaff, padded
+      <li><strong>Academic's Set (Cost 63зм):</strong> Quarterstaff, padded
       cloth armor, abacus, clothes (fine), scholar's pack</li>
 
-      <li><strong>Scholar's Set (Cost 58gp):</strong> Dagger, padded cloth
+      <li><strong>Scholar's Set (Cost 58зм):</strong> Dagger, padded cloth
       armor, clothes (travelers), ink (1-ounce bottle), diary, a crowbar, a
       hammer, 10 pitons, and an explorer's pack</li>
 
-      <li><strong>Physician's Set (Cost 91gp):</strong> Dagger, padded cloth
+      <li><strong>Physician's Set (Cost 91зм):</strong> Dagger, padded cloth
       armor, backpack, clothes (common), healer's satchel (10 uses), 10
       bandages, and medicinal salve (3 uses)</li>
 
@@ -459,7 +459,7 @@ system:
   hitDiceUsed: 0
   advancement:
     - _id: FRxVq2gmJq6bNazt
-      title: Hit Points
+      title: Очки здоров’я
       type: HitPoints
     - _id: rMCTkDL3cIIM0wrK
       type: Trait
@@ -529,7 +529,7 @@ system:
             count: 4
     - _id: kEBJSEgs8ftLC4NS
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 1
       configuration:
         items:
@@ -538,7 +538,7 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.hwvg960u7r646yx2
     - _id: HZvtKURAkESz8I75
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 2
       configuration:
         items:
@@ -546,7 +546,7 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.y3hiwasiwid8gz1u
     - _id: xI9mCiX0PFnSsvIb
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 5
       configuration:
         items:
@@ -554,28 +554,28 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.8mnttob3hnqjywzq
     - _id: YPviza5Z3tg017Oq
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 6
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.luapp6zqydhkeemn
     - _id: RY819kpSIinYw4w2
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 9
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.m36tik3n2m6qa4ci
     - _id: 20Zt9xbvD1Vbo8Ci
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 13
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.ka6y3igvu8kz3y1v
     - _id: 64QvmHYJwR9Gevsv
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 17
       configuration:
         items:
@@ -583,7 +583,7 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.e1igphq3svnvagl4
     - _id: q7h7Q7Gw6FImUy4z
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 20
       configuration:
         items:
