--- a/src/packs/classes/class_Warlock_jxhhglbrdpsgnqm5.yml
+++ b/src/packs/classes/class_Warlock_jxhhglbrdpsgnqm5.yml
@@ -1,11 +1,11 @@
 folder: null
-name: Warlock
+name: Чаклун
 type: class
 img: icons/magic/symbols/circled-gem-pink.webp
 system:
   description:
     value: >-
-      <p><strong>Table: Warlock</strong></p>
+      <p><strong>Таблиця: Чаклун</strong></p>
 
       <table style="width: 100%; height: 369.532px;" border="1"><colgroup><col
       style="width: 8.52713%;"><col style="width: 9.10928%;"><col style="width:
@@ -18,11 +18,11 @@ system:
 
       <tr style="height: 33.5938px;">
 
-      <td style="height: 33.5938px; text-align: center;">Level</td>
+      <td style="height: 33.5938px; text-align: center;">Рівень</td>
 
-      <td style="height: 33.5938px; text-align: center;">Prof.<br>Bonus</td>
+      <td style="height: 33.5938px; text-align: center;">Бонус<br>майстерності</td>
 
-      <td style="height: 33.5938px; text-align: center;">Features</td>
+      <td style="height: 33.5938px; text-align: center;">Особливості</td>
 
       <td style="height: 33.5938px; text-align: center;">Cantrips<br>Known</td>
 
@@ -30,7 +30,7 @@ system:
 
       <td style="height: 33.5938px; text-align: center;">Spell<br>Points</td>
 
-      <td style="height: 33.5938px; text-align: center;">Spell<br>Level</td>
+      <td style="height: 33.5938px; text-align: center;">Spell<br>Рівень</td>
 
       <td style="height: 33.5938px; text-align: center;">Secrets<br>Known</td>
 
@@ -79,7 +79,7 @@ system:
       center;">@UUID[Compendium.a5e-for-dnd5e.class-features.Item.ccymzytvxost335r]{Eldritch
       Invocations}
       @UUID[Compendium.a5e-for-dnd5e.class-features.Item.o1ed6xk84ghmzmdo]{Secrets
-      of Arcana}</td>
+      of Аркана}</td>
 
       <td style="height: 16.7969px; text-align: center;">2</td>
 
@@ -525,35 +525,35 @@ system:
 
       </table>
 
-      <h3>Hit Points</h3>
+      <h3>Очки здоров’я</h3>
 
-      <p><strong>Hit Dice: </strong>1d8 per warlock level</p>
+      <p><strong>Кістки здоров’я: </strong>1d8 за кожний рівень чаклуна</p>
 
-      <p><strong>Hit Points at 1st Level: </strong>8 + your Constitution
-      modifier</p>
+      <p><strong>Hit Points at 1st Рівень: </strong>8 + your Constitution
+      модифікатор</p>
 
-      <p><strong>Hit Points at Higher Levels: </strong>1d8 (or 5) + your
-      Constitution modifier per warlock level after first</p>
+      <p><strong>Hit Points at Higher Рівеньs: </strong>1d8 (or 5) + your
+      Constitution модифікатор per warlock level after first</p>
 
-      <h3>Proficiencies</h3>
+      <h3>Володіння</h3>
 
       <p><strong>Armor:&nbsp;</strong>Light armor</p>
 
-      <p><strong>Weapons: </strong>Simple weapons</p>
+      <p><strong>Зброя: </strong>Simple weapons</p>
 
       <p><strong>Tools:&nbsp;</strong>Game set (cards)</p>
 
       <p><strong>Saving Throws:&nbsp;</strong>Intelligence, Wisdom</p>
 
-      <p><strong>Skills:&nbsp;</strong>Choose two skills from Arcana, Deception,
-      History, Intimidation, Investigation, Nature, and Religion</p>
+      <p><strong>Skills:&nbsp;</strong>Choose two skills from Аркана, Обман,
+      Історія, Залякування, Розслідування, Природа, and Релігія</p>
 
-      <h3>Equipment</h3>
+      <h3>Спорядження</h3>
 
       <p>You begin the game with 110 gold which you can spend on your
       character&rsquo;s starting weapons, armor, and adventuring gear. You can
       select your own gear or choose one of the following equipment packages.
-      Also consult the Suggested Equipment section of your chosen
+      Також звернися до розділу «Рекомендоване Equipment section of your chosen
       background.</p>
 
       <ul>
@@ -600,7 +600,7 @@ system:
   hitDiceUsed: 0
   advancement:
     - _id: FRxVq2gmJq6bNazt
-      title: Hit Points
+      title: Очки здоров’я
       type: HitPoints
     - _id: j6B5kWO25sZ65X99
       type: Trait
@@ -660,7 +660,7 @@ system:
             count: 2
     - _id: yTa6DhFdrgpoLLSJ
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 1
       configuration:
         items:
@@ -668,7 +668,7 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.ulmcmf3ofmpzmgzf
     - _id: o2XblrssGe9JpD9C
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 2
       configuration:
         items:
@@ -676,35 +676,35 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.ccymzytvxost335r
     - _id: 71FS3LgChuEqQojx
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 3
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.9m8p73ihwnicm2zi
     - _id: xIpvWctv8epEHpU4
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 4
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.yrcfetjokyci4xk2
     - _id: V8goHJwazHHsI82N
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 5
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.0q5qeigzy5bv2zrq
     - _id: Ox5zC6CHmtcWbG5N
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 6
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.gndmzgng98w9k3jq
     - _id: jQ3UDmEIjarGqaZI
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 20
       configuration:
         items:
