--- a/src/packs/classes/class_Wielder_clmiva5a8vdkdbmq.yml
+++ b/src/packs/classes/class_Wielder_clmiva5a8vdkdbmq.yml
@@ -1,11 +1,11 @@
 folder: null
-name: Wielder
+name: Володар
 type: class
 img: icons/skills/melee/sword-stuck-glowing-pink.webp
 system:
   description:
     value: >-
-      <p><strong>Table: Wielder<br></strong></p>
+      <p><strong>Таблиця: Володар<br></strong></p>
 
       <table style="width: 100%; height: 558.6px;" border="1"><colgroup><col
       style="width: 4.6595%;"><col style="width: 6.09319%;"><col style="width:
@@ -18,11 +18,11 @@ system:
 
       <tr style="text-align: center; height: 47.6px;">
 
-      <td style="height: 47.6px;">Level</td>
+      <td style="height: 47.6px;">Рівень</td>
 
-      <td style="height: 47.6px;">Prof.<br>Bonus</td>
+      <td style="height: 47.6px;">Бонус<br>майстерності</td>
 
-      <td style="height: 47.6px;">Features</td>
+      <td style="height: 47.6px;">Особливості</td>
 
       <td style="height: 47.6px;">
 
@@ -60,7 +60,7 @@ system:
 
       <p>Spell</p>
 
-      <p>Level</p>
+      <p>Рівень</p>
 
       </td>
 
@@ -577,17 +577,17 @@ system:
 
       </table>
 
-      <h3>Hit Points</h3>
+      <h3>Очки здоров’я</h3>
 
-      <p><strong>Hit Dice:</strong> 1d8 per wielder level</p>
+      <p><strong>Hit Dice:</strong> 1d8 за кожний рівень володаря</p>
 
-      <p><strong>Hit Points at 1st Level:</strong> 8 + your Constitution
-      modifier</p>
+      <p><strong>Hit Points at 1st Рівень:</strong> 8 + your Constitution
+      модифікатор</p>
 
-      <p><strong>Hit Points at Higher Levels:</strong> 1d8 (or 5) + your
-      Constitution modifier per wielder level after 1st</p>
+      <p><strong>Hit Points at Higher Рівеньs:</strong> 1d8 (or 5) + your
+      Constitution модифікатор за кожний рівень володаря після 1-го</p>
 
-      <h3>Proficiencies</h3>
+      <h3>Володіння</h3>
 
       <p><strong>Armor:</strong> Light armor, medium armor, shields</p>
 
@@ -595,16 +595,16 @@ system:
 
       <p><strong>Saving Throws:</strong> Strength, Constitution</p>
 
-      <p><strong>Skills:</strong> Choose two from Athletics, Acrobatics, Arcana,
-      History, Intimidation, Performance Persuasion, Religion, or Sleight of
+      <p><strong>Skills:</strong> Choose two from Атлетика, Акробатика, Аркана,
+      Історія, Залякування, Виступ Переконання, Релігія, or Sleight of
       Hand</p>
 
-      <h3>Equipment</h3>
+      <h3>Спорядження</h3>
 
       <p>You begin the game with 120 gold which you can spend on your
       character&rsquo;s starting weapons, armor, and adventuring gear. You can
       select your own gear or choose one of the following equipment packages.
-      Also consult the Suggested Equipment section of your chosen
+      Також звернися до розділу «Рекомендоване Equipment section of your chosen
       background.</p>
 
       <ul>
@@ -651,7 +651,7 @@ system:
   hitDiceUsed: 0
   advancement:
     - _id: FRxVq2gmJq6bNazt
-      title: Hit Points
+      title: Очки здоров’я
       type: HitPoints
     - _id: mDmZdE0yf3cKSPsM
       type: Trait
@@ -705,7 +705,7 @@ system:
             count: 2
     - _id: u6Zik16qfE08x2zh
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 1
       configuration:
         items:
@@ -713,7 +713,7 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.efpmbyqjkyf4xeho
     - _id: icrfYKeI5iZMRqwh
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 2
       configuration:
         items:
@@ -721,14 +721,14 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.21aui3hwla5ykw3i
     - _id: Qf9lVn7i2PFSjpbj
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 3
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.krwn0da3yjm9lh57
     - _id: 2U5IM1FyhPpQHeI9
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 4
       configuration:
         items:
@@ -736,7 +736,7 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.i6u3yucwwumpoa5c
     - _id: Un0SAXmH9yTs81Xx
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 5
       configuration:
         items:
@@ -744,21 +744,21 @@ system:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.iq8cqiia40rs54os
     - _id: 3WzqwDiduFx2F546
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 9
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.ukdth285bnj3w3qc
     - _id: o9tEujBM48cfyveF
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 13
       configuration:
         items:
           - uuid: Compendium.a5e-for-dnd5e.class-features.Item.58m3opb9e064kx2g
     - _id: Es68zVzNUzMfc39z
       type: ItemGrant
-      title: Features
+      title: Особливості
       level: 20
       configuration:
         items:
