--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
   - source: /lang/en.json
     translation: /lang/%two_letters_code%.json
+  - source: /src/packs/**/*.yml
+    translation: /%original_path%/%two_letters_code%/%original_file_name%
